# rapier-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: architecture.md  components.md  phases.md  project-plan.md  roadmap.md  workflow.md
rapier/: __init__.py  __main__.py  loop.py  main.py
rapier/agents/: __init__.py  base.py  coder.py  coordinator.py  researcher.py  verifier.py
rapier/context/: __init__.py  compactor.py  engine.py  history.py
rapier/goals/: __init__.py  budget.py  engine.py  verifier.py
rapier/llm/: __init__.py  anthropic.py  client.py  openai_provider.py  retry.py  types.py
rapier/memory/: __init__.py  extractor.py  graph.py  recall.py  store.py  types.py
rapier/permissions/: __init__.py  bash_analyzer.py  gate.py  rules.py
rapier/tools/: __init__.py  base.py  bash.py  edit_file.py  glob.py  grep.py  read_file.py  task.py  web_fetch.py  write_file.py
rapier/ui/: __init__.py
tests/: conftest.py  test_loop.py
tests/test_agents/: test_base.py  test_coordinator.py  test_specialists.py
tests/test_context/: __init__.py  test_autocompact.py  test_engine.py
tests/test_goals/: __init__.py  test_engine.py
tests/test_llm/: test_retry.py
tests/test_memory/: __init__.py  test_extractor.py  test_graph.py  test_recall.py  test_store.py
tests/test_permissions/: __init__.py  test_gate.py
tests/test_tools/: __init__.py  test_file_tools.py
